--- a/src/styles/DoorOpenerWidget.css
+++ b/src/styles/DoorOpenerWidget.css
@@ -10,7 +10,7 @@
 }
 
 .MuiButtonBase-root {
-    background-color: #8f95d1 !important;
+    background-color: #062b3a !important;
     margin: 0 auto;
 }
 
