SG-56: Full logs widget
This adds the widget that display the full logs of the usage of the
garage door. This makes it easier to track history for various reasons.

HTTPS is also now disabled in frontend and monitoring backendbecause
of the latency from the backend server. HTTPS to the
garage-control-server remains the same.

--- a/src/styles/Widget.css
+++ b/src/styles/Widget.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   min-height: 265px;
   border-radius: 4px;
+  max-height: 265px;
 }
 
 /* autoprefixer: off */
@@ -38,10 +39,14 @@
 
 .Widget .content {
   padding-top: 1rem;
+  overflow-y: auto;
+
 }
 
 @media(max-width: 600px) {
   .Widget .content {
       padding-top: 1rem;
+      overflow-y: auto;
+
   }
 }
