Various pre production aesthetic changes
These changes are to make the logs sheet more human readable, the open
closed sign look more proportioned with the door open button, and
changing the colour of the Closed sign to a more darker colour.

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   font-family: 'Didact Gothic', sans-serif;
   color: #ecf0f1;
-  background-color: #1d1d1d;
+  background-color: #000000;
 }
 
 code {
