--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,7 +23,7 @@
   }
 }
 
-@media(max-width: 800px) {
+@media(max-width: 660px) {
   .App {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -35,6 +35,13 @@
       margin-top: 0;
   }
 }
+
+/* @media screen {
+  .App {
+    padding-left: 32px;
+    padding-right: 0px;
+  }
+} */
 
 nav ul{height:232px; width:auto; padding-inline-start: 10px; margin-block-start: 0.5em; margin-block-end: 0.5em;}
 nav ul{overflow:hidden; overflow-y:scroll;}
