--- a/src/styles/DoorOpenerButton.css
+++ b/src/styles/DoorOpenerButton.css
@@ -2,8 +2,8 @@
     color: #FFFFFF !important;
     background-color: #082d42 !important;
     margin: 0 auto;
-    width: 80%;
-    height: 70%;
+    width: 256px;
+    height: 163px;
 }
 
 #cancelButton {
