--- a/src/styles/Widget.css
+++ b/src/styles/Widget.css
@@ -1,5 +1,5 @@
 .Widget {
-  background-color: #020202;
+  background-color: #151515;
   padding: 1rem;
   min-height: 265px;
   border-radius: 4px;
@@ -40,13 +40,19 @@
 .Widget .content {
   padding-top: 1rem;
   overflow-y: auto;
+}
 
+.Widget .content {
+  overflow-y: hidden !important;
+}
+
+.Widget .content:hover {
+  overflow-y: auto !important;
 }
 
 @media(max-width: 600px) {
   .Widget .content {
       padding-top: 1rem;
       overflow-y: auto;
-
   }
 }
