--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,8 +13,34 @@
 @supports(display:grid) {
   .App {
       display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(1, 1fr);
+      grid-gap: 1rem;
+  }
+
+  .App > * + * {
+      margin-top: 0;
+  }
+}
+
+@media(max-width: 1921px) {
+  .App {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      grid-gap: 1rem;
+  }
+
+  .App > * + * {
+      margin-top: 0;
+  }
+}
+
+@media(max-width: 1285px) {
+  .App {
+      display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
       grid-gap: 1rem;
   }
 
@@ -27,7 +53,7 @@
   .App {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(10, 1fr);
     grid-gap: 1rem;
 }
 
