--- a/src/styles/DoorLogsWidget.css
+++ b/src/styles/DoorLogsWidget.css
@@ -1,3 +1,12 @@
-.pre {
-    display: inline;
+pre{
+    display: block;
+    font-family: monospace;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 80% !important;
+    line-height: 1.42857143;
+    color: rgb(255, 255, 255) !important;
+    word-break: break-all;
+    word-wrap: break-word;
+    border-radius: 4px;
 }
